// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmallAppItem component should render correctly an app 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <img
      alt="test-icon"
      aria-hidden={true}
      className="sto-small-app-item-icon"
      focusable={false}
      height="64"
      src="<svg></svg>"
      width="64"
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Cozy Test
    </h4>
    <p
      className="sto-small-app-item-developer"
    >
      By Cozy
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app in maintenance 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <img
      alt="test2-icon"
      aria-hidden={true}
      className="sto-small-app-item-icon"
      focusable={false}
      height="64"
      src="<svg></svg>"
      width="64"
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Test2
    </h4>
    <p
      className="sto-small-app-item-developer"
    >
      By Naming me
    </p>
    <p
      className="sto-small-app-item-status"
    >
      In maintenance
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app with iconToLoad (icon being fetching) 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <div
      className="sto-small-app-item-icon"
    >
      <Placeholder
        height="3rem"
        width="3rem"
      />
    </div>
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Test2
    </h4>
    <p
      className="sto-small-app-item-developer"
    >
      By Naming me
    </p>
    <p
      className="sto-small-app-item-status"
    >
      Installed
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app with iconToLoad if isMobile 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <div
      className="sto-small-app-item-icon"
    >
      <Placeholder
        height="2.5rem"
        width="2.5rem"
      />
    </div>
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Test2
    </h4>
    <p
      className="sto-small-app-item-developer"
    >
      By Naming me
    </p>
    <p
      className="sto-small-app-item-status"
    >
      Installed
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app without developer property 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <img
      alt="test-icon"
      aria-hidden={true}
      className="sto-small-app-item-icon"
      focusable={false}
      height="64"
      src="<svg></svg>"
      width="64"
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Cozy Test
    </h4>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an installed app 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <img
      alt="test2-icon"
      aria-hidden={true}
      className="sto-small-app-item-icon"
      focusable={false}
      height="64"
      src="<svg></svg>"
      width="64"
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Test2
    </h4>
    <p
      className="sto-small-app-item-developer"
    >
      By Naming me
    </p>
    <p
      className="sto-small-app-item-status"
    >
      Installed
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an installed app without icon provided 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <Icon
      aria-hidden={true}
      className="sto-small-app-item-icon sto-small-app-item-icon--default blurry"
      color="#95999D"
      focusable={false}
      height="64"
      icon="test-file-stub"
      spin={false}
      width="48"
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Cozy Test
    </h4>
    <p
      className="sto-small-app-item-developer"
    >
      By Cozy
    </p>
  </div>
</button>
`;
